release/0.0.2/docs/PSVVX.md
---
Module Name: PSVVX
Module Guid: 00000000-0000-0000-0000-000000000000
Download Help Link: https://github.com/zloeber/psvvx/release/PSVVX/docs/PSVVX.md
Help Version: 0.0.2
Locale: en-US
---

# PSVVX Module
## Description
PowerShell module for Polycom VVX devices

## PSVVX Cmdlets
### [Find-VVXDevice](Find-VVXDevice.md)
Discovers a VVX device.

### [Get-VVXCallStatus](Get-VVXCallStatus.md)
Returns the current call status of a device

### [Get-VVXDeviceInfo](Get-VVXDeviceInfo.md)
Returns device related information

### [Get-VVXLastRESTCall](Get-VVXLastRESTCall.md)
Returns the last REST call information that was used.

### [Get-VVXLineInfo](Get-VVXLineInfo.md)
Returns device related line information

### [Get-VVXNetworkInfo](Get-VVXNetworkInfo.md)
Returns device related network information

### [Get-VVXNetworkStat](Get-VVXNetworkStat.md)
Returns device related network statistics

### [Get-VVXSetting](Get-VVXSetting.md)
Retreive a configuration setting from a device.

### [Get-VVXSIPStatus](Get-VVXSIPStatus.md)
Returns device related SIP status information

### [Reset-VVXConfigToFactory](Reset-VVXConfigToFactory.md)
Factory reset a VVX device

### [Reset-VVXConfiguration](Reset-VVXConfiguration.md)
Reset a VVX device configuration

### [Restart-VVXDevice](Restart-VVXDevice.md)
Restart a VVX device

### [Restart-VVXDeviceAndReboot](Restart-VVXDeviceAndReboot.md)
Reboot a VVX device

### [Send-VVXRestCommand](Send-VVXRestCommand.md)
Sends a REST command to a VVX device.

### [Set-VVXScreenCapture](Set-VVXScreenCapture.md)
Set the screen capture setting of a device


